cart, crud, login, fixed bugs

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,20 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <!-- DataTables -->
-    <link rel="stylesheet" href="../../plugins/datatables-bs4/css/dataTables.bootstrap4.css">
+    <!-- <link rel="stylesheet" href="../../plugins/datatables-bs4/css/dataTables.bootstrap4.css"> -->
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+    <!-- FONT -->
+    <style type="text/css">
+      @font-face {
+        font-family: "AirbnbCereal";
+        src: url('%PUBLIC_URL%/font/fonts/AirbnbCerealMedium.ttf');
+      }
+      body{
+        font-family: "AirbnbCereal" !important;
+      }
+    </style>
 
     <meta name="theme-color" content="#000000" />
     <meta
