add redux on cart part 1

--- a/public/index.html
+++ b/public/index.html
@@ -56,11 +56,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Tosm Cafe</title>
+    <title>Arcademy Cafe</title>
   </head>
   <body class="hold-transition sidebar-mini">
     <div class="bg_loading show" id="bg_loading">
-      <img src="%PUBLIC_URL%/assets/dist/img/segi6_black.png" class="logo-loading animated infinite rubberBand">
+      <img src="%PUBLIC_URL%/assets/dist/img/arkademy.png" class="logo-loading animated infinite rubberBand">
       <!-- <div class="loading border-tosm" id="loading"></div> -->
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
