--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- <meta charset="utf-8" /> -->
-    <link rel="icon" href="%PUBLIC_URL%/assets/dist/img/segi6_white.png" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/dist/img/logo.png" />
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
